--- a/micrograd/number_demo.ipynb
+++ b/micrograd/number_demo.ipynb
@@ -298,6 +298,48 @@
     "\n",
     "print(dot)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trace(root):\n",
+    "    nodes, edges = set(), set()\n",
+    "\n",
+    "    def build(v):\n",
+    "        if v not in nodes:\n",
+    "            nodes.add(v)\n",
+    "            for child in v._prev:\n",
+    "                edges.add((child, v))\n",
+    "                build(child)\n",
+    "    build(root)\n",
+    "    return nodes, edges\n",
+    "\n",
+    "\n",
+    "def draw_dot(root, format='svg', rankdir='LR'):\n",
+    "    \"\"\"\n",
+    "    format: png | svg | ...\n",
+    "    rankdir: TB (top to bottom graph) | LR (left to right)\n",
+    "    \"\"\"\n",
+    "    assert rankdir in ['LR', 'TB']\n",
+    "    nodes, edges = trace(root)\n",
+    "    # , node_attr={'rankdir': 'TB'})\n",
+    "    dot = Digraph(format=format, graph_attr={'rankdir': rankdir})\n",
+    "\n",
+    "    for n in nodes:\n",
+    "        dot.node(name=str(id(n)), label=\"{ data %.4f | grad %.4f }\" % (\n",
+    "            n.data, n.grad), shape='record')\n",
+    "        if n._op:\n",
+    "            dot.node(name=str(id(n)) + n._op, label=n._op)\n",
+    "            dot.edge(str(id(n)) + n._op, str(id(n)))\n",
+    "\n",
+    "    for n1, n2 in edges:\n",
+    "        dot.edge(str(id(n1)), str(id(n2)) + n2._op)\n",
+    "\n",
+    "    return dot"
+   ]
   }
  ],
  "metadata": {
