added vae demo notebook

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -50,9 +50,6 @@
     "from sklearn.datasets import make_moons, make_blobs\n",
     "X, y = make_moons(n_samples=100, noise=0.1)\n",
     "\n",
-    "\n",
-    "print\n",
-    "\n",
     "y = y*2 - 1 # make y be -1 or 1\n",
     "# visualize in 2D\n",
     "plt.figure(figsize=(5,5))\n",
@@ -73,9 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m     accuracy \u001b[38;5;241m=\u001b[39m [(yi \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m==\u001b[39m (scorei\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m yi, scorei \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(yb, scores)]\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m total_loss, \u001b[38;5;28msum\u001b[39m(accuracy) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(accuracy)\n\u001b[0;32m---> 27\u001b[0m total_loss, acc \u001b[38;5;241m=\u001b[39m \u001b[43mloss\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(total_loss, acc)\n",
+      "Cell \u001b[0;32mIn[1], line 6\u001b[0m, in \u001b[0;36mloss\u001b[0;34m(batch_size)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mloss\u001b[39m(batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m      3\u001b[0m     \n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m# inline DataLoader :)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m batch_size \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m         Xb, yb \u001b[38;5;241m=\u001b[39m \u001b[43mX\u001b[49m, y\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      8\u001b[0m         ri \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mpermutation(X\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m])[:batch_size]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# loss function\n",
     "def loss(batch_size=None):\n",
