added vae readme

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -9,112 +9,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from micrograd.engine import Value\n",
-    "from micrograd.nn import Neuron, Layer, MLP"
+    "from micrograd.nn import Neuron, Layer, MLP, AutoEncoder, VariationalAutoEncoder\n",
+    "from micrograd.loss_funcs import mean_squared_error, vae_loss\n",
+    "from micrograd.optimizer import SGD\n",
+    "from micrograd.batch_iterator import BatchIterator\n",
+    "from sklearn.datasets import load_digits\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(1337)\n",
-    "random.seed(1337)"
+    "random.seed(1337)\n",
+    "np.set_printoptions(suppress=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make up a dataset\n",
-    "\n",
-    "from sklearn.datasets import make_moons, make_blobs\n",
-    "X, y = make_moons(n_samples=100, noise=0.1)\n",
-    "\n",
-    "y = y*2 - 1 # make y be -1 or 1\n",
-    "# visualize in 2D\n",
-    "plt.figure(figsize=(5,5))\n",
-    "plt.scatter(X[:,0], X[:,1], c=y, s=20, cmap='jet')"
+    "x = [[Value(random.randint(0, 1)) for _ in range(5)] for _ in range(20)]\n",
+    "target = x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize a model \n",
-    "model = MLP(2, [16, 16, 1]) # 2-layer neural network\n",
-    "print(model)\n",
-    "print(\"number of parameters\", len(model.parameters()))"
+    "auto = AutoEncoder(\n",
+    "    in_embeds=25,# Input dimension   # Number of hidden layers\n",
+    "    latent_dim=5,\n",
+    "    act_func=Value.sigmoid, # Latent space dimension,       # Activation function (None uses default leaky_relu)\n",
+    "    tied=True       # Whether to use tied weights\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m     accuracy \u001b[38;5;241m=\u001b[39m [(yi \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m==\u001b[39m (scorei\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m yi, scorei \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(yb, scores)]\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m total_loss, \u001b[38;5;28msum\u001b[39m(accuracy) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(accuracy)\n\u001b[0;32m---> 27\u001b[0m total_loss, acc \u001b[38;5;241m=\u001b[39m \u001b[43mloss\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(total_loss, acc)\n",
-      "Cell \u001b[0;32mIn[1], line 6\u001b[0m, in \u001b[0;36mloss\u001b[0;34m(batch_size)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mloss\u001b[39m(batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m      3\u001b[0m     \n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m# inline DataLoader :)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m batch_size \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m         Xb, yb \u001b[38;5;241m=\u001b[39m \u001b[43mX\u001b[49m, y\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      8\u001b[0m         ri \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mpermutation(X\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m])[:batch_size]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 0, AutoEncoder Loss: 6.256687214258\n",
+      "Iteration: 10, AutoEncoder Loss: 3.021441369853\n",
+      "Iteration: 20, AutoEncoder Loss: 2.378851304624\n",
+      "Iteration: 30, AutoEncoder Loss: 2.031525398569\n",
+      "Iteration: 40, AutoEncoder Loss: 1.769468417888\n"
      ]
     }
    ],
    "source": [
-    "# loss function\n",
-    "def loss(batch_size=None):\n",
-    "    \n",
-    "    # inline DataLoader :)\n",
-    "    if batch_size is None:\n",
-    "        Xb, yb = X, y\n",
-    "    else:\n",
-    "        ri = np.random.permutation(X.shape[0])[:batch_size]\n",
-    "        Xb, yb = X[ri], y[ri]\n",
-    "    inputs = [list(map(Value, xrow)) for xrow in Xb]\n",
-    "    \n",
-    "    # forward the model to get scores\n",
-    "    scores = list(map(model, inputs))\n",
-    "    \n",
-    "    # svm \"max-margin\" loss\n",
-    "    losses = [(1 + -yi*scorei).relu() for yi, scorei in zip(yb, scores)]\n",
-    "    data_loss = sum(losses) * (1.0 / len(losses))\n",
-    "    # L2 regularization\n",
-    "    alpha = 1e-4\n",
-    "    reg_loss = alpha * sum((p*p for p in model.parameters()))\n",
-    "    total_loss = data_loss + reg_loss\n",
-    "    \n",
-    "    # also get accuracy\n",
-    "    accuracy = [(yi > 0) == (scorei.data > 0) for yi, scorei in zip(yb, scores)]\n",
-    "    return total_loss, sum(accuracy) / len(accuracy)\n",
+    "optimizer = SGD(auto.parameters(), learning_rate=0.5)\n",
     "\n",
-    "total_loss, acc = loss()\n",
-    "print(total_loss, acc)"
+    "for i in range(50):\n",
+    "    optimizer.zero_grad()\n",
+    "    \n",
+    "    reconstruction = [auto(i) for i in x]\n",
+    "    \n",
+    "    loss = sum([mean_squared_error(recon, targ) for recon, targ in zip(reconstruction, target)])\n",
+    "\n",
+    "    # Backward pass\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    optimizer.step()\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    if i % 10 == 0:\n",
+    "        print(f\"Iteration: {i}, AutoEncoder Loss: {loss.data:.12f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 0 0 0 0 0 1 1 1 1 1 0 1 1 0 0 1 0 1 1 0 1 1]\n",
+      "\n",
+      "[0.97381359 0.85307712 0.9897     0.57469108 0.26877156 0.37199923\n",
+      " 0.34930796 0.06376394 0.9956249  0.78792912 0.63948578 0.02492209\n",
+      " 0.74980356 0.33467329 0.56673871 0.10448293 0.00606407 0.09418646\n",
+      " 0.60444269 0.11290939 0.97749671 0.80515552 0.2014048  0.82550021\n",
+      " 0.79164191]\n"
+     ]
+    }
+   ],
+   "source": [
+    "original_data = np.array([i.data for i in x[0]])\n",
+    "\n",
+    "reconstructed = np.array([j.data for j in reconstruction[0]])\n",
+    "\n",
+    "print(original_data)\n",
+    "print()\n",
+    "print(reconstructed)\n",
+    "\n",
+    "\n",
+    "encoder = auto.encode\n",
+    "\n",
+    "test = [Value(random.uniform(0, 1)) for _ in range(25)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1701073  0.37303355 0.51598203 0.32412059 0.25192021 0.14925865\n",
+      " 0.46177295 0.51839559 0.36265632 0.71896608 0.92644477 0.86578428\n",
+      " 0.06961999 0.94279002 0.1770544  0.40709859 0.23278027 0.79388905\n",
+      " 0.12750324 0.04178973 0.96025833 0.15691848 0.36567517 0.92996087\n",
+      " 0.80917674]\n",
+      "[0.79694723 0.64358232 0.68676757 0.29544522 0.26878396 0.60277587\n",
+      " 0.36787543 0.65969419 0.71589039 0.13510937 0.61907216 0.29359141\n",
+      " 0.34221491 0.45083033 0.07235615 0.3020035  0.24966053 0.55860424\n",
+      " 0.53821378 0.48280322 0.87954599 0.44818257 0.17946126 0.34670628\n",
+      " 0.30976285]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.array([i.data for i in test]))\n",
+    "\n",
+    "# print(auto.encode(noise[0]))\n",
+    "\n",
+    "print(np.array([val.data for val in auto(test)]))"
    ]
   },
   {
@@ -122,51 +167,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# optimization\n",
-    "for k in range(100):\n",
-    "    \n",
-    "    # forward\n",
-    "    total_loss, acc = loss()\n",
-    "    \n",
-    "    # backward\n",
-    "    model.zero_grad()\n",
-    "    total_loss.backward()\n",
-    "    \n",
-    "    # update (sgd)\n",
-    "    learning_rate = 1.0 - 0.9*k/100\n",
-    "    for p in model.parameters():\n",
-    "        p.data -= learning_rate * p.grad\n",
-    "    \n",
-    "    if k % 1 == 0:\n",
-    "        print(f\"step {k} loss {total_loss.data}, accuracy {acc*100}%\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# visualize decision boundary\n",
-    "\n",
-    "h = 0.25\n",
-    "x_min, x_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
-    "y_min, y_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
-    "xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n",
-    "                     np.arange(y_min, y_max, h))\n",
-    "Xmesh = np.c_[xx.ravel(), yy.ravel()]\n",
-    "inputs = [list(map(Value, xrow)) for xrow in Xmesh]\n",
-    "scores = list(map(model, inputs))\n",
-    "Z = np.array([s.data > 0 for s in scores])\n",
-    "Z = Z.reshape(xx.shape)\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "plt.contourf(xx, yy, Z, cmap=plt.cm.Spectral, alpha=0.8)\n",
-    "plt.scatter(X[:, 0], X[:, 1], c=y, s=40, cmap=plt.cm.Spectral)\n",
-    "plt.xlim(xx.min(), xx.max())\n",
-    "plt.ylim(yy.min(), yy.max())\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
