refactoring engine to use numpy ndarray instead of scalar objects

--- a/micrograd/tensed.ipynb
+++ b/micrograd/tensed.ipynb
@@ -134,12 +134,10 @@
     "        return out\n",
     "   \n",
     "    def sum(self):\n",
-    "        # Sum the numpy array\n",
     "        out = Value(np.sum(self.data), (self,), 'sum')\n",
     "        \n",
     "        def _backward():\n",
-    "            # The gradient of a sum is 1, broadcasted to the input shape\n",
-    "            # We multiply by out.grad to chain the gradients\n",
+    "            # grad of sum is 1, broadcasted to the input shape\n",
     "            self.grad += np.ones_like(self.data) * out.grad\n",
     "        out._backward = _backward\n",
     "        return out\n",
@@ -148,7 +146,7 @@
     "        other = other if isinstance(other, Value) else Value(other)\n",
     "        out = Value(self.data @ other.data, (self, other), '@')\n",
     "        def _backward():\n",
-    "            # handle vectors and matrices by relying on numpy broadcasting rules carefully\n",
+    "            # handle vectors and matrices by relying on numpy broadcasting \n",
     "            self.grad += out.grad @ other.data.T\n",
     "            other.grad += self.data.T @ out.grad\n",
     "        out._backward = _backward\n",
@@ -317,12 +315,10 @@
     "class SGD(Optimizer):\n",
     "    def __init__(self, parameters, learning_rate=0.01):\n",
     "        super().__init__(parameters)\n",
-    "        # Remove int() cast to allow decimal multipliers\n",
     "        self.learning_rate = learning_rate \n",
     "\n",
     "    def step(self):\n",
     "        for p in self.parameters:\n",
-    "            # Ensure we are not multiplying by zero (unless intended)\n",
     "            p.data = p.data - (self.learning_rate * p.grad)\n",
     "\n",
     "# def mean_squared_error(y_true, y_pred):\n",
